--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="submit">SUBMIT</string>
     <string name="confirm_password_placeholder">Confirm Password</string>
     <string name="title_activity_home">GigPool</string>
+    <string name="opt_addTask">Add task</string>
+    <string name="opt_settings">Settings</string>
+    <string name="openDrawer">Open Drawer</string>
+    <string name="closeDrawer">Close Drawer</string>
 </resources>
