--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="action_settings">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="logoDsc">fine FIne</string>
-    <string name="google_logo">googlelogin</string>
+    <string name="hello_blank_fragment">Hello World</string>
+    <string name="logoDsc">App Logo</string>
+    <string name="google_logo">Google login</string>
     <string name="email_placeholder">Email</string>
     <string name="password_placeholder">Password</string>
     <string name="btn_signup">SIGN UP</string>
@@ -23,4 +23,8 @@
     <string name="nav_about">About</string>
     <string name="nav_settings">Settings</string>
     <string name="nav_signout">Sign out</string>
+    <string name="title_activity_tabs">Tabs</string>
+    <string name="tab_1_now">NOW</string>
+    <string name="tab_2_assigned">ASSIGNED</string>
+    <string name="tab_3_applied">APPLIED</string>
 </resources>
