--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,13 +18,13 @@
     <string name="openDrawer">Open Drawer</string>
     <string name="closeDrawer">Close Drawer</string>
     <string name="profile_photo">Profile Photo</string>
-    <string name="nav_home">Home</string>
-    <string name="nav_wallet">Wallet</string>
-    <string name="nav_about">About</string>
-    <string name="nav_settings">Settings</string>
-    <string name="nav_signout">Sign out</string>
     <string name="title_activity_tabs">Tabs</string>
     <string name="tab_1_now">NOW</string>
     <string name="tab_2_assigned">ASSIGNED</string>
     <string name="tab_3_applied">APPLIED</string>
+    <string name="nav_drawer_1">Profile</string>
+    <string name="nav_drawer_2">Find Friends</string>
+    <string name="nav_drawer_3">Settings</string>
+    <string name="nav_drawer_4">Sign Out</string>
+    <string name="chat_list_image">chat list profile image</string>
 </resources>
