--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
-    <string name="app_name">GigPool</string>
+    <string name="app_name">Pepperchat</string>
     <string name="action_settings">Settings</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello World</string>
     <string name="logoDsc">App Logo</string>
     <string name="google_logo">Google login</string>
@@ -12,7 +11,6 @@
     <string name="btn_login">LOG IN</string>
     <string name="submit">SUBMIT</string>
     <string name="confirm_password_placeholder">Confirm Password</string>
-    <string name="title_activity_home">GigPool</string>
     <string name="opt_addTask">Add task</string>
     <string name="opt_settings">Settings</string>
     <string name="openDrawer">Open Drawer</string>
