--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="nav_drawer_3">Settings</string>
     <string name="nav_drawer_4">Sign Out</string>
     <string name="chat_list_image">chat list profile image</string>
+    <string name="opt_attach_file">Attachment</string>
+    <string name="opt_call">Call</string>
 </resources>
