--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Pepperchat</string>
+    <string name="app_name">Bhatinder</string>
     <string name="action_settings">Settings</string>
 
     <string name="hello_blank_fragment">Hello World</string>
